name:                pivotal-tracker-api-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/pivotal-tracker-api-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pivotal-tracker-api-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , pivotal-tracker-api
                     , pivotal-tracker-api-playground
                     , text
                     , wreq
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables, TemplateHaskell, DeriveGeneric

test-suite pivotal-tracker-api-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pivotal-tracker-api-playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pivotal-tracker-api-playground
